# dot

./: .gitignore  .gitmodules  Cargo.toml  build.rs
.cargo/: config.toml
.github/workflows/: main.yaml
config/alacritty/: alacritty.toml
config/binary/: version.toml
config/git/: .gitconfig  profile.toml
config/rye/: config.toml
config/skm/: .gitignore
config/ssh/: key.toml
config/starship/: starship.toml
config/zellij/: config.kdl
python/: pythonrc.py
shell/common/: config.sh  directory.sh  entry.sh  exit.sh  path.sh  post.sh  pre.sh
shell/zsh/: .zshenv  .zshrc  entry.zsh  exit.zsh  interactive.zsh  post.zsh  pre.zsh
shell/zsh/plugins/config/: zsh-syntax-highlighting.zsh
src/: lib.rs  main.rs  prefix.rs  utils.rs
src/constant/: env.rs  mod.rs  target.rs
src/git/: clone.rs  mod.rs  profile.rs  progress.rs  utils.rs
src/init/: mod.rs  zsh.rs
src/install/: binary.rs  config.rs  mod.rs
src/ssh/: config.rs  key.rs  mod.rs
