[package]
name = "dot"
version = "0.2.0"
edition = "2021"
description = "Dot utility"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "string"] }
clap-verbosity-flag = { version = "2.2.0" }
const_format = { version = "0.2.32", features = ["fmt"] }
convert_case = { version = "0.6.0" }
derivative = { version = "2.2.0" }
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "unstable-kv",
] }
flate2 = { version = "1.0.30" }
git2 = { version = "0.18.3", features = ["vendored-libgit2"] }
homedir = { version = "0.2.1" }
indicatif = { version = "0.17.8" }
itertools = { version = "0.13.0" }
log = { version = "0.4.21", features = ["kv"] }
serde = { version = "1.0.203", features = ["derive"] }
tar = { version = "0.4.40" }
tempfile = { version = "3.10.1", features = ["nightly"] }
toml = { version = "0.8.13" }
ureq = { version = "2.9.7" }
url = { version = "2.5.0" }
zip = { version = "2.1.1" }

[build-dependencies]
built = { version = "0.7.3" }

[profile.release]
opt-level = 3
debug = "none"
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1
