[package]
name = "dot"
version = "0.6.0"
edition = "2021"
description = "Dot utility"

[dependencies]
git2 = { git = "https://github.com/rust-lang/git2-rs", rev = "3ab6e094baabf54766fdbab1f6a466ce7cbf3da1", default-features = false, features = [
    "https",
    "ssh-openssh",
    "vendored-libgit2",
] }
clap = { version = "4.5.6", features = ["derive", "string"] }
clap-verbosity-flag = { version = "2.2.0" }
const_format = { version = "0.2.32", features = ["fmt"] }
convert_case = { version = "0.6.0" }
derivative = { version = "2.2.0" }
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "unstable-kv",
] }
flate2 = { version = "1.0.30" }
homedir = { version = "0.3.3" }
indicatif = { version = "0.17.8" }
itertools = { version = "0.13.0" }
log = { version = "0.4.21", features = ["kv"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.203", features = ["derive"] }
tar = { version = "0.4.41" }
tempfile = { version = "3.10.1", features = ["nightly"] }
toml = { version = "0.8.14" }
ureq = { version = "2.9.7" }
url = { version = "2.5.0" }
zip = { version = "2.1.3" }

[build-dependencies]
built = { version = "0.7.3" }
convert_case = { version = "0.6.0" }
toml = { version = "0.8.14" }

[profile.release]
opt-level = 3
debug = "none"
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1
