[package]
name = "dot"
version = "0.8.8"
edition = "2024"
description = "Dot utility"

[dependencies]
clap = { version = "4.5.26", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.2" }
const_format = { version = "0.2.34", features = ["fmt"] }
convert_case = { version = "0.8.0" }
derivative = { version = "2.2.0" }
env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
    "unstable-kv",
] }
flate2 = { version = "1.0.35" }
git2 = { git = "https://github.com/rust-lang/git2-rs", rev = "8614b5de5245b06caa8b6e569e8c5bde06ab3e51", default-features = false, features = [
    "https",
    "ssh-openssh",
    "vendored-libgit2",
    "vendored-openssl",
] }
homedir = { version = "0.3.4" }
indicatif = { version = "0.17.9" }
itertools = { version = "0.14.0" }
log = { version = "0.4.22", features = ["kv"] }
rand = { version = "0.8.5" }
reqwest = { version = "0.12.12", default-features = false, features = [
    "charset",
    "native-tls-vendored",
    "http2",
    "macos-system-configuration",
    "blocking",
] }
serde = { version = "1.0.217", features = ["derive"] }
tar = { version = "0.4.43" }
tempfile = { version = "3.15.0", features = ["nightly"] }
toml = { version = "0.8.19" }
url = { version = "2.5.4" }
zip = { version = "2.2.2" }

[build-dependencies]
built = { version = "0.7.5" }
convert_case = { version = "0.8.0" }
toml = { version = "0.8.19" }

[profile.release]
opt-level = 3
debug = "none"
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1
